[gd_scene load_steps=7 format=3 uid="uid://bfya278vfhgn0"]

[ext_resource type="Script" path="res://UI/start.gd" id="1_olrix"]
[ext_resource type="VideoStream" path="res://素材/start.ogv" id="1_slo41"]
[ext_resource type="Texture2D" uid="uid://cq1c3a0c8bl0k" path="res://素材/start_last_frame.png" id="3_a36gr"]

[sub_resource type="Animation" id="Animation_7cj52"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("button:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1414, -229)]
}

[sub_resource type="Animation" id="Animation_pjjch"]
resource_name = "start"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1319, -136), Vector2(914, 135), Vector2(430, 285), Vector2(0, 456)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("button:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 6.28319, -6.28319, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u7g26"]
_data = {
"RESET": SubResource("Animation_7cj52"),
"start": SubResource("Animation_pjjch")
}

[node name="start" type="CanvasLayer"]
script = ExtResource("1_olrix")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("1_slo41")
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_a36gr")

[node name="button" type="VBoxContainer" parent="."]
offset_left = 1414.0
offset_top = -229.0
offset_right = 1670.0
offset_bottom = -37.0

[node name="start" type="Button" parent="button"]
layout_mode = 2
theme_override_font_sizes/font_size = 62
text = "开始游戏"

[node name="exit" type="Button" parent="button"]
layout_mode = 2
theme_override_font_sizes/font_size = 62
text = "退出游戏"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u7g26")
}

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="button/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="button/exit" to="." method="_on_exit_pressed"]
